@@ -1,10 +1,11 @@
-<h5>3.1 RC 1        [2019-12-22]</h5>
+<h5>3.1 RC 1        [2019-12-22]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.1
 <hr>
 - __NAMESPACE__ in Helper.php (mamba)
 - renamed 'PHP_SELF' to 'SCRIPT_NAME' (mamba)
 - cosmetics, PSR12 (mamba)
 - decreased index key length (mamba) (MySQL error #1071)
 - added few \Xmf\Request checks (mamba)
+- Scrutinizer suggestions (mamba)
 
 
 <h5>3.1 Beta 1        [NOT RELEASED]</h5>
